[package]
name = "mkpasswd"
version = "0.3.0"
authors = ["Draphar <draphar-code@protonmail.com>"]
edition = "2018"
documentation = "https://docs.rs/mkpasswd/"
description = "Library and command-line tool to generate passwords"
repository = "https://github.com/Draphar/mkpasswd/"
readme = "README.md"
keywords = ["password", "generator"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"

[dependencies]
rand_core = { version = "0.5", features = ["std"] }
